# Digital-Circulation

cli/: Cargo.toml  build.rs
cli/src/: cli.rs  command.rs  error.rs  host_perf_check.rs  lib.rs
core-primitives/: Cargo.toml
core-primitives/src/: lib.rs
dcchain/: Cargo.toml  README.adoc
dcchain/src/: lib.rs  primitives.rs  wasm_api.rs
dcchain/test-parachains/: Cargo.toml  README.md
dcchain/test-parachains/adder/: Cargo.toml  build.rs
dcchain/test-parachains/adder/collator/: Cargo.toml  README.md
dcchain/test-parachains/adder/collator/src/: cli.rs  lib.rs  main.rs
dcchain/test-parachains/adder/collator/tests/: integration.rs
dcchain/test-parachains/adder/src/: lib.rs  wasm_validation.rs
dcchain/test-parachains/halt/: Cargo.toml
dcchain/test-parachains/halt/src/: lib.rs
dcchain/test-parachains/src/: lib.rs
dcchain/test-parachains/undying/: Cargo.toml  build.rs
dcchain/test-parachains/undying/collator/: Cargo.toml
dcchain/test-parachains/undying/collator/src/: cli.rs  lib.rs  main.rs
dcchain/test-parachains/undying/collator/tests/: integration.rs
dcchain/test-parachains/undying/src/: lib.rs  wasm_validation.rs
doc/: docker.md  release-checklist.md  shell-completion.md  testing.md
erasure-coding/: Cargo.toml
erasure-coding/fuzzer/: Cargo.toml
erasure-coding/fuzzer/src/: reconstruct.rs  round_trip.rs
erasure-coding/src/: lib.rs
grafana/: README.md
grafana/general/: kusama_deployment.json
grafana/parachains/: status.json
primitives/: Cargo.toml  README.adoc
primitives/src/: lib.rs  runtime_api.rs
primitives/src/v2/: metrics.rs  mod.rs  signed.rs
primitives/src/vstaging/: mod.rs
primitives/test-helpers/: Cargo.toml
primitives/test-helpers/src/: lib.rs
roadmap/implementers-guide/: README.md  book.toml
roadmap/implementers-guide/src/: README.md  SUMMARY.md  architecture.md  further-reading.md  glossary.md  messaging.md  protocol-approval.md  protocol-chain-selection.md  protocol-disputes.md  protocol-overview.md  pvf-prechecking.md
roadmap/implementers-guide/src/node/: README.md  subsystems-and-jobs.md
roadmap/implementers-guide/src/node/approval/: approval-distribution.md  approval-voting.md
roadmap/implementers-guide/src/node/availability/: availability-distribution.md
roadmap/implementers-guide/src/node/backing/: candidate-backing.md  statement-distribution.md
roadmap/implementers-guide/src/node/collators/: README.md  collation-generation.md  collator-protocol.md
roadmap/implementers-guide/src/node/disputes/: dispute-coordinator.md  dispute-distribution.md
roadmap/implementers-guide/src/node/utility/: availability-store.md  candidate-validation.md  gossip-support.md  provisioner.md
roadmap/implementers-guide/src/runtime/: README.md  configuration.md  disputes.md  hrmp.md  inclusion.md  initializer.md  parainherent.md  paras.md  scheduler.md  session_info.md  shared.md  ump.md
roadmap/implementers-guide/src/runtime-api/: validators.md
roadmap/implementers-guide/src/types/: approval.md
rpc/: Cargo.toml
rpc/src/: lib.rs
xcm/pallet-xcm/: Cargo.toml
xcm/pallet-xcm-benchmarks/: Cargo.toml  template.hbs
xcm/pallet-xcm-benchmarks/src/: lib.rs  mock.rs
xcm/pallet-xcm-benchmarks/src/fungible/: benchmarking.rs  mock.rs  mod.rs
xcm/pallet-xcm-benchmarks/src/generic/: benchmarking.rs  mock.rs
xcm/pallet-xcm/src/: lib.rs  mock.rs  tests.rs
xcm/procedural/src/: lib.rs  v1.rs  weight_info.rs
xcm/procedural/src/v0/: multilocation.rs
xcm/procedural/src/v1/: multilocation.rs
xcm/src/: double_encoded.rs  lib.rs
xcm/src/v0/: junction.rs  mod.rs  multi_asset.rs  multi_location.rs  order.rs  traits.rs
xcm/src/v1/: junction.rs  mod.rs  multiasset.rs  multilocation.rs  order.rs  traits.rs
xcm/src/v2/: mod.rs  traits.rs
xcm/xcm-builder/: Cargo.toml
xcm/xcm-builder/src/: barriers.rs  currency_adapter.rs  filter_asset_location.rs  fungibles_adapter.rs  lib.rs  location_conversion.rs  matches_fungible.rs  mock.rs  origin_conversion.rs  test_utils.rs  tests.rs  weight.rs
xcm/xcm-builder/tests/: scenarios.rs
xcm/xcm-builder/tests/mock/: mod.rs
xcm/xcm-executor/: Cargo.toml
xcm/xcm-executor/integration-tests/: Cargo.toml
xcm/xcm-executor/integration-tests/src/: lib.rs
xcm/xcm-executor/src/: assets.rs  config.rs
