[package]
name = "digital_circulation-cli"
version = "0.9.19"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Digital Circulation Relay-chain Client Node"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on Linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "3.1", features = ["derive"], optional = true }
log = "0.4.16"
thiserror = "1.0.30"
futures = "0.3.21"
pyro = { package = "pyroscope", version = "0.3.1", optional = true }

service = { package = "digital_circulation-service", path = "../node/service", default-features = false, optional = true }
digital_circulation-client = { path = "../node/client", optional = true }
digital_circulation-node-core-pvf = { path = "../node/core/pvf", optional = true }
digital_circulation-performance-test = { path = "../node/test/performance-test", optional = true }

sp-core = { git = "https://github.com/ajie1155/substrate", branch = "master" }
frame-benchmarking-cli = { git = "https://github.com/ajie1155/substrate", branch = "master", optional = true }
try-runtime-cli = { git = "https://github.com/ajie1155/substrate", branch = "master", optional = true }
sc-cli = { git = "https://github.com/ajie1155/substrate", branch = "master", optional = true }
sc-service = { git = "https://github.com/ajie1155/substrate", branch = "master", optional = true }
digital_circulation-node-metrics = { path = "../node/metrics" }
sc-tracing = { git = "https://github.com/ajie1155/substrate", branch = "master", optional = true }

# this crate is used only to enable `trie-memory-tracker` feature
# see https://github.com/ajie1155/substrate/pull/6745
sp-trie = { git = "https://github.com/ajie1155/substrate", branch = "master", default-features = false }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/ajie1155/substrate", branch = "master" }

[features]
default = ["wasmtime", "db", "cli", "full-node", "trie-memory-tracker", "digital_circulation-native"]
wasmtime = ["sc-cli/wasmtime"]
db = ["service/db"]
cli = [
	"clap",
	"sc-cli",
	"sc-service",
	"sc-tracing",
	"frame-benchmarking-cli",
	"try-runtime-cli",
	"digital_circulation-client",
	"digital_circulation-node-core-pvf",
	"digital_circulation-performance-test",
]
runtime-benchmarks = ["service/runtime-benchmarks", "digital_circulation-node-metrics/runtime-benchmarks"]
trie-memory-tracker = ["sp-trie/memory-tracker"]
full-node = ["service/full-node"]
try-runtime = ["service/try-runtime"]
fast-runtime = ["service/fast-runtime"]
pyroscope = ["pyro"]

# Configure the native runtimes to use. Digital Circulation is enabled by default.
#
# Validators require the native runtime currently
digital_circulation-native = ["service/digital_circulation-native"]
kusama-native = ["service/kusama-native"]
westend-native = ["service/westend-native"]
rococo-native = ["service/rococo-native"]

malus = ["full-node", "service/malus"]
runtime-metrics = ["service/runtime-metrics", "digital_circulation-node-metrics/runtime-metrics"]
