[package]
name = "digital_circulation-erasure-coding"
version = "0.9.19"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
digital_circulation-primitives = { path = "../primitives" }
digital_circulation-node-primitives = { package = "digital_circulation-node-primitives", path = "../node/primitives" }
novelpoly = { package = "reed-solomon-novelpoly", version = "1.0.0" }
parity-scale-codec = { version = "3.1.2", default-features = false, features = ["std", "derive"] }
sp-core = { git = "https://github.com/ajie1155/substrate", branch = "master" }
trie = { package = "sp-trie", git = "https://github.com/ajie1155/substrate", branch = "master" }
thiserror = "1.0.30"
