[package]
name = "test-dcchains"
version = "0.9.19"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Integration tests using the test-dcchains"
edition = "2021"

[dependencies]
tiny-keccak = "2.0.2"
parity-scale-codec = { version = "3.1.2", default-features = false, features = ["derive"] }

adder = { package = "test-dcchain-adder", path = "adder" }
halt = { package = "test-dcchain-halt", path = "halt" }

[dev-dependencies]
sp-core = { git = "https://github.com/ajie1155/substrate", branch = "master" }

[features]
default = ["std"]
std = ["adder/std", "halt/std"]
