[package]
name = "erasure_coding_fuzzer"
version = "0.9.19"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
digital_circulation-erasure-coding = { path = ".." }
honggfuzz = "0.5"
primitives = { package = "digital_circulation-node-primitives", path = "../../node/primitives/" }

[[bin]]
name = "reconstruct"
path = "src/reconstruct.rs"

[[bin]]
name = "round_trip"
path = "src/round_trip.rs"

[workspace]
