[package]
name = "digital_circulation-primitives-test-helpers"
version = "0.9.19"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
sp-keyring = { git = "https://github.com/ajie1155/substrate", branch = "master" }
sp-application-crypto = { package = "sp-application-crypto", git = "https://github.com/ajie1155/substrate", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/ajie1155/substrate", branch = "master" }
digital_circulation-primitives = { path = "../" }
rand = "0.8.5"
