[package]
name = "pallet-xcm-benchmarks"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
version = "0.9.19"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { default-features = false, branch = "master", git = "https://github.com/ajie1155/substrate" }
frame-system = { default-features = false, branch = "master", git = "https://github.com/ajie1155/substrate" }
sp-runtime = { default-features = false, branch = "master", git = "https://github.com/ajie1155/substrate" }
sp-std = { default-features = false, branch = "master", git = "https://github.com/ajie1155/substrate" }
xcm-executor = { path = "../xcm-executor", default-features = false, features = ["runtime-benchmarks"] }
frame-benchmarking = { default-features = false, branch = "master", git = "https://github.com/ajie1155/substrate" }
xcm = { path = "..", default-features = false, features = ["runtime-benchmarks"] }
log = "0.4.16"

[dev-dependencies]
pallet-balances = { branch = "master", git = "https://github.com/ajie1155/substrate" }
pallet-assets = { branch = "master", git = "https://github.com/ajie1155/substrate" }
sp-core = { branch = "master", git = "https://github.com/ajie1155/substrate" }
sp-io = { branch = "master", git = "https://github.com/ajie1155/substrate" }
sp-tracing = { branch = "master", git = "https://github.com/ajie1155/substrate" }
xcm-builder = { path = "../xcm-builder" }
xcm = { path = ".." }
# temp
pallet-xcm = { path = "../pallet-xcm" }
digital_circulation-runtime-common = { path = "../../runtime/common" }
# westend-runtime = { path = "../../runtime/westend", features = ["runtime-benchmarks"] }
digital_circulation-primitives = { path = "../../primitives" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std"
]
