[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
name = "pallet-xcm"
version = "0.9.19"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", optional = true, features = ["derive"] }
log = { version = "0.4.16", default-features = false }

sp-std = { git = "https://github.com/ajie1155/substrate", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/ajie1155/substrate", default-features = false, branch = "master" }
sp-core = { git = "https://github.com/ajie1155/substrate", default-features = false, branch = "master" }
frame-support = { git = "https://github.com/ajie1155/substrate", default-features = false, branch = "master" }
frame-system = { git = "https://github.com/ajie1155/substrate", default-features = false, branch = "master" }

xcm = { path = "..", default-features = false }
xcm-executor = { path = "../xcm-executor", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/ajie1155/substrate", branch = "master" }
digital_circulation-runtime-dcchains = { path = "../../runtime/dcchains" }
sp-io = { git = "https://github.com/ajie1155/substrate", branch = "master", default-features = false }
xcm-builder = { path = "../xcm-builder" }
digital_circulation-dcchain = { path = "../../dcchain" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"xcm/std",
	"xcm-executor/std",
]
runtime-benchmarks = []
