[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
name = "xcm-builder"
description = "Tools & types for building with XCM and its executor."
version = "0.9.19"

[dependencies]
parity-scale-codec = { version = "3.1.2", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
xcm = { path = "..", default-features = false }
xcm-executor = { path = "../xcm-executor", default-features = false }
sp-std = { git = "https://github.com/ajie1155/substrate", branch = "master", default-features = false }
sp-arithmetic = { git = "https://github.com/ajie1155/substrate", branch = "master", default-features = false }
sp-io = { git = "https://github.com/ajie1155/substrate", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/ajie1155/substrate", branch = "master", default-features = false }
frame-support = { git = "https://github.com/ajie1155/substrate", branch = "master", default-features = false }
frame-system = { git = "https://github.com/ajie1155/substrate", branch = "master", default-features = false }
pallet-transaction-payment = { git = "https://github.com/ajie1155/substrate", branch = "master", default-features = false }
log = { version = "0.4.16", default-features = false }

# DigitalCirculation dependencies
digital_circulation-dcchain = { path = "../../dcchain", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/ajie1155/substrate", branch = "master" }
pallet-balances = { git = "https://github.com/ajie1155/substrate", branch = "master" }
pallet-xcm = { path = "../pallet-xcm" }
digital_circulation-runtime-dcchains = { path = "../../runtime/dcchains" }
[features]
default = ["std"]
runtime-benchmarks = []
std = [
	"log/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"xcm/std",
	"xcm-executor/std",
	"sp-std/std",
	"sp-arithmetic/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"digital_circulation-dcchain/std",
	"pallet-transaction-payment/std",
]
