[package]
name = "test-dcchain-halt"
version = "0.9.19"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Test dcchain which executes forever"
edition = "2021"
build = "build.rs"

[dependencies]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/ajie1155/substrate", branch = "master" }

[features]
default = [ "std" ]
std = []
