[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
name = "xcm-executor-integration-tests"
description = "Integration tests for the XCM Executor"
version = "0.9.19"

[dependencies]
frame-support = { git = "https://github.com/ajie1155/substrate", branch = "master", default-features = false }
frame-system = { git = "https://github.com/ajie1155/substrate", branch = "master" }
futures = "0.3.21"
pallet-xcm = { path = "../../pallet-xcm" }
digital_circulation-test-client = { path = "../../../node/test/client" }
digital_circulation-test-runtime = { path = "../../../runtime/test-runtime" }
digital_circulation-test-service = { path = "../../../node/test/service" }
sp-consensus = { git = "https://github.com/ajie1155/substrate", branch = "master" }
sp-keyring = { git = "https://github.com/ajie1155/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/ajie1155/substrate", branch = "master", default-features = false }
sp-state-machine = { git = "https://github.com/ajie1155/substrate", branch = "master" }
xcm = { path = "../..", default-features = false }
xcm-executor = { path = ".." }
sp-tracing = { git = "https://github.com/ajie1155/substrate", branch = "master" }

[features]
default = ["std"]
std = [
	"xcm/std",
	"sp-runtime/std",
	"frame-support/std",
]
